Nginx-Ingress-Controller/sample-webapp/sample-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: welcome-webapp
spec:
  ingressClassName: nginx
  rules:
  - host: cluster1.homelab.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: welcome-webapp
            port:
              number: 80
